--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
+  "name": "production-project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.tsx",
   "scripts": {
-    "start": "webpack serve --env mode=development --env port=5000",
-    "build:prod": "webpack --env mode=production"
+    "start": "webpack serve --env port=3000",
+    "build:prod": "webpack --env mode=production",
+    "lint:ts": " eslint \"**/*.{ts,tsx}\"",
+    "lint:ts:fix": " eslint \"**/*.{ts,tsx}\" --fix"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
@@ -76,6 +85,6 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.11.2"
   }
 }
